EDIT: filip.pkomarek.cz is now windows.fkomarek.eu

--- a/hlavniskupina/index.html
+++ b/hlavniskupina/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <body>
     
-    <a href="http://filip.pkomarek.cz/windows"><img class="okno"  src="okno.png" width="952" height="600"></a>
+    <a href="https://windows.fkomarek.eu/windows"><img class="okno"  src="okno.png" width="952" height="600"></a>
     <img class="okno2"  src="okno2.png" width="740" height="360">
     <a href="http://fakeupdate.net/win10/"><img class="winupdate" src="winupdate.png" width="73" height="73"></a>
     <span class="winupdate-text"><a href="http://fakeupdate.net/win10/"><center>Instalace<br>Windows</center></a></span>
