--- a/hry/pacman/index.html
+++ b/hry/pacman/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <body class="alias">
     
-    <a href="http://filip.pkomarek.cz/windows/hry/"><img class="okno" src="http://filip.pkomarek.cz/windows/okno.png" width="952" height="600"></a>
+    <a href="https://windows.fkomarek.eu/windows/hry/"><img class="okno" src="https://windows.fkomarek.eu/windows/okno.png" width="952" height="600"></a>
     <img class="okno2"  src="okno2.PNG" width="610" height="430">
     <span style="position: absolute; top: 234px; z-index: 3; left: 306px"> <iframe src="https://www.retrogames.cc/embed/26817-classic-nes-pacman-u-hyperion.html" width="598" height="390" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe> </span>
     <span class="ovladani-text">pohyb: šipky (možnost přenastavení v emulátoru)</span>
