--- a/prislusenstvi/kalkulacka/index.html
+++ b/prislusenstvi/kalkulacka/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <body class="alias">
     
-    <a href="http://filip.pkomarek.cz/windows/prislusenstvi/index.html"><img class="oknoold" src="okno.jpg" width="952" height="600"></a>
+    <a href="https://windows.fkomarek.eu/windows/prislusenstvi/index.html"><img class="oknoold" src="okno.jpg" width="952" height="600"></a>
     <img class="okno2"  src="okno2.PNG" width="172" height="165">
     <span style="position: absolute; top: 300px; z-index: 3; left: 500px"> <iframe src="kalkulacka.html" width="170" height="150" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe> </span>
     
