EDIT: links folder repair

--- a/hry/freakshow/windowed.html
+++ b/hry/freakshow/windowed.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <body class="alias">
     
-    <a href="https://windows.fkomarek.eu/windows/hry/"><img class="okno" src="https://windows.fkomarek.eu/windows/okno.png" width="952" height="600"></a>
+    <a href="https://windows.fkomarek.eu/hry/"><img class="okno" src="https://windows.fkomarek.eu/okno.png" width="952" height="600"></a>
     <img class="okno2"  src="okno2.PNG" width="610" height="430">
     <span style="position: absolute; top: 234px; z-index: 3; left: 306px"> <iframe src="https://archive.org/embed/Freak_Show_1994_Voyager" width="598" height="390" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe></iframe> </span>
     <span class="ovladani-text">Načítání může chvíli trvat, hra si potřebuje načíst všechny důležité soubory.</span>
