--- a/hry/index.html
+++ b/hry/index.html
@@ -8,9 +8,9 @@
 <body>
     
     <img class="okno2"  src="okno2.PNG" width="610" height="325">
-    <a href="https://windows.fkomarek.eu/windows/"><img class="oknoold" src="okno.png" width="952" height="600"></a>
+    <a href="https://windows.fkomarek.eu/"><img class="oknoold" src="okno.png" width="952" height="600"></a>
     <a href="solitaire/index.html"><img class="solitaire" src="solitare.PNG" width="40" height="47"></a>
-    <a href="https://windows.fkomarek.eu/windows/"><img class="oknoold" src="okno.png" width="952" height="600"></a>
+    <a href="https://windows.fkomarek.eu/"><img class="oknoold" src="okno.png" width="952" height="600"></a>
     <span class="solitaire-text"><a href="solitaire/index.html">Solitaire</a></span>
     <a href="https://minesweeper.online/cs/"><img class="hledanimin" src="winmine.PNG" width="47" height="47"></a>
     <span class="hledanimin-text"><a href="https://minesweeper.online/cs/">Hledání min</a></span>
