--- a/prislusenstvi/paint/index.html
+++ b/prislusenstvi/paint/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <body class="alias">
     
-    <a href="https://windows.fkomarek.eu/windows/prislusenstvi/index.html"><img class="oknoold" src="okno.jpg" width="952" height="600"></a>
+    <a href="https://windows.fkomarek.eu/prislusenstvi/index.html"><img class="oknoold" src="okno.jpg" width="952" height="600"></a>
     <img class="okno2"  src="okno2.PNG" width="610" height="430">
     <span style="position: absolute; top: 234px; z-index: 3; left: 306px"> <iframe src="https://jspaint.app/#local:b48b6c98aea91" width="598" height="390" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe></span> 
     <style>
