--- a/hry/freakshow/index.html
+++ b/hry/freakshow/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <body class="alias">
     
-    <a href="https://windows.fkomarek.eu/windows/hry/"><img class="okno" src="https://windows.fkomarek.eu/windows/okno.png" width="952" height="600"></a>
+    <a href="https://windows.fkomarek.eu/hry/"><img class="okno" src="https://windows.fkomarek.eu/okno.png" width="952" height="600"></a>
     <img class="okno2"  src="okno2.PNG" width="610" height="430">
     <span class="guestion">Spustit ve Fullscreen (doporučeno) nebo v okně?</span>
     <span class="fullscreen"><a href="https://archive.org/embed/Freak_Show_1994_Voyager">Fullscreen</a></span>
