--- a/prislusenstvi/hodiny/index.html
+++ b/prislusenstvi/hodiny/index.html
@@ -10,9 +10,9 @@
 <body class="alias">
     
     <br><br>
-    <a href="https://windows.fkomarek.eu/windows/prislusenstvi/index.html"><img class="oknoold" src="okno.jpg" width="952" height="600"></a>
+    <a href="https://windows.fkomarek.eu/prislusenstvi/index.html"><img class="oknoold" src="okno.jpg" width="952" height="600"></a>
     <img class="okno2"  src="okno2.PNG" width="610" height="430">
-    <span style="position: absolute; top: 234px; z-index: 3; left: 306px"> <iframe src="https://windows.fkomarek.eu/windows/prislusenstvi/hodiny/hodiny.html" width="598" height="390" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe></span> 
+    <span style="position: absolute; top: 234px; z-index: 3; left: 306px"> <iframe src="https://windows.fkomarek.eu/prislusenstvi/hodiny/hodiny.html" width="598" height="390" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe></span> 
     <style>
         .okno2{
             position: absolute;
