EDIT: links repair 2

--- a/prislusenstvi/index.html
+++ b/prislusenstvi/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <body>
     
-    <a href="https://windows.fkomarek.eu/windows"><img class="okno"  src="okno.png" width="952" height="600"></a>
+    <a href="https://windows.fkomarek.eu/"><img class="okno"  src="okno.png" width="952" height="600"></a>
      <img class="oknoprislusenstvi"  src="okno2.PNG" width="700" height="430">
     <a href="https://www.google.com/intl/cs_CZ/docs/about/"><img class="write" src="write.PNG" width="73" height="73"></a>
       <span class="writetext"><a href="https://www.google.com/intl/cs_CZ/docs/about/">Write</a></span>
